initial commit for ChargifyV2 with Chargify Direct

--- a/app/views/scripts/subscriptions/list.phtml
+++ b/app/views/scripts/subscriptions/list.phtml
@@ -4,6 +4,7 @@
   <div id="action_bar" class="clearfix">
     <ul>
       <li><a class="add" href="/subscriptions/create">Create New Subscription</a></li>
+      <li><a class="add" href="/direct/signup">Create New Subscription (Chargify Direct)</a></li>
     </ul>
   </div>
   <div id="subscriptions-list" class="list">
@@ -90,5 +91,5 @@
       </tbody>
     </table>
   </div> <!-- /subscriptions-list -->
-  
+
 </div> <!-- /subscriptions -->
